--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -33,12 +33,12 @@
         <div class="board">
             <h4 class="list_title">日志列表</h4>
             <p class="add_button">
-                <a href="./artical_add.html">写日志</a>
+                <a href="./artical_add.php">写日志</a>
             </p>
             <div class="clear-float"></div>
             <div class="list_board">
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -46,7 +46,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -54,7 +54,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -62,7 +62,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -70,7 +70,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -78,7 +78,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -86,7 +86,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -94,7 +94,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -102,7 +102,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -110,7 +110,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
