--- a/web/www/view/artical_content.html
+++ b/web/www/view/artical_content.html
@@ -15,23 +15,23 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
 
     <div class="container">
         <div class="board">
-            <a href="./artical.html" class="back">
+            <a href="./artical.php" class="back">
                 <p class="back_button">
                     返回
                 </p>
