--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -32,61 +32,61 @@
     <div class="container">
         <div class="left">
             <div class="art_preview">
-                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <h2 class="art_preview_title"><a href="./artical_content.php">这里是首页日志标题</a></h2>
                 <p class="posted_time">
                     Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
-                    <a href="./artical_content.html">
+                    <a href="./artical_content.php">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
                 <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                    <span id="%tag1_name"><a href="./tags_detail.php">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.php">tag2_name</a></span>
                 </p>
             </div>
             <div class="art_preview">
-                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <h2 class="art_preview_title"><a href="./artical_content.php">这里是首页日志标题</a></h2>
                 <p class="posted_time">
                     Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
-                    <a href="./artical_content.html">
+                    <a href="./artical_content.php">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
                 <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                    <span id="%tag1_name"><a href="./tags_detail.php">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.php">tag2_name</a></span>
                 </p>
             </div><div class="art_preview">
-                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <h2 class="art_preview_title"><a href="./artical_content.php">这里是首页日志标题</a></h2>
                 <p class="posted_time">
                     Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
-                    <a href="./artical_content.html">
+                    <a href="./artical_content.php">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
                 <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                    <span id="%tag1_name"><a href="./tags_detail.php">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.php">tag2_name</a></span>
                 </p>
             </div>
-            <a href="./artical.html" class="more_link">
+            <a href="./artical.php" class="more_link">
               <p class="more">更多...</p>
           </a>
         </div>
         <div class="right">
 
             <div class="msg_area">
-                <h3 class="msg_preview_title"><a href="./msg.html">留言板</a></h2>
+                <h3 class="msg_preview_title"><a href="./msg.php">留言板</a></h2>
               <div class="msg_board">
                   <div class="msg_preview">
                     <p class="msg_preview_content">
-                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                      <a href="./msg_content.php">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
                       Posted at xx-xx
@@ -94,7 +94,7 @@
                   </div>
                   <div class="msg_preview">
                     <p class="msg_preview_content">
-                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                      <a href="./msg_content.php">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
                       Posted at xx-xx
@@ -102,7 +102,7 @@
                   </div>
                   <div class="msg_preview">
                     <p class="msg_preview_content">
-                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                      <a href="./msg_content.php">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
                       Posted at xx-xx
@@ -110,7 +110,7 @@
                   </div>
                   <div class="msg_preview">
                     <p class="msg_preview_content">
-                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                      <a href="./msg_content.php">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
                       Posted at xx-xx
@@ -118,22 +118,22 @@
                   </div>
                   <div class="msg_preview">
                     <p class="msg_preview_content">
-                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                      <a href="./msg_content.php">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
                       Posted at xx-xx
                     </p>
                   </div>
-                  <a href="./artical.html" class="more_link">
+                  <a href="./artical.php" class="more_link">
                     <p class="more">更多...</p>
                 </a>
               </div>
           </div>
           <div class="tags_area">
-              <h3 class="tags_title"><a href="./tags.html">Tags</a></h3>
+              <h3 class="tags_title"><a href="./tags.php">Tags</a></h3>
                 <div class="tags_board">
-                    <span id="%tag1_name" class="tags_name" ><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name" class="tags_name" ><a href="./tags_detail.html">tag2_name</a></span>
+                    <span id="%tag1_name" class="tags_name" ><a href="./tags_detail.php">tag1_name</a></span>
+                    <span id="%tag2_name" class="tags_name" ><a href="./tags_detail.php">tag2_name</a></span>
                 </div>
             </div>
 
