--- a/web/www/view/msg.html
+++ b/web/www/view/msg.html
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -33,12 +33,12 @@
         <div class="board">
             <h4 class="list_title">留言列表</h4>
             <p class="add_button">
-                <a href="./msg_add.html">写留言</a>
+                <a href="./msg_add.php">写留言</a>
             </p>
             <div class="clear-float"></div>
             <div class="list_board">
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -46,7 +46,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -54,7 +54,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -62,7 +62,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -70,7 +70,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -78,7 +78,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -86,7 +86,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -94,7 +94,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -102,7 +102,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
@@ -110,7 +110,7 @@
                     <hr />
                 </div>
                 <div class="lists">
-                    <a href="./msg_content.html"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
                     </p>
