--- a/web/www/view/sign_up.html
+++ b/web/www/view/sign_up.html
@@ -6,8 +6,8 @@
     <meta name="description" content="这里是 @AbracadabraZ翔云 的个人博客，与你一起发现世界的奇妙" />
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
-    <link rel="stylesheet" href="../css/default.css" />
-    <link rel="stylesheet" href="../css/sign.css" />
+    <link rel="stylesheet" href="./css/default.css" />
+    <link rel="stylesheet" href="./css/sign.css" />
 </head>
 
 <body>
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -47,7 +47,7 @@
             <div class="small_button">
                 <input class="sign_button" id="sign_up_button" type="submit" name="submit" value="注册" />
                 <div class="sign_link">
-                    <a href="./sign_in.html">已有账号？前去登陆~</a>
+                    <a href="../sign_in.php">已有账号？前去登陆~</a>
                 </div>
             </div>
 
