--- a/web/www/view/tags.html
+++ b/web/www/view/tags.html
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -34,16 +34,16 @@
             <h4 class="tags">Tags</h4>
             <div class="tag_board">
                 <p id="tag1_name">
-                    <a href="./tags_detail.html">tag1_name</a>
+                    <a href="./tags_detail.php">tag1_name</a>
                 </p>
                 <p id="tag2_name">
-                    <a href="./tags_detail.html">tag2_name</a>
+                    <a href="./tags_detail.php">tag2_name</a>
                 </p>
                 <p id="tag3_name">
-                    <a href="./tags_detail.html">tag3_name</a>
+                    <a href="./tags_detail.php">tag3_name</a>
                 </p>
                 <p id="tag4_name">
-                    <a href="./tags_detail.html">tag4_name</a>
+                    <a href="./tags_detail.php">tag4_name</a>
                 </p>
                 <div class="clear-float"></div>
             </div>
