--- a/web/www/view/tags_detail.html
+++ b/web/www/view/tags_detail.html
@@ -15,16 +15,16 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.html">首页</a></li>
-                <li><a href="./artical.html">日志</a></li>
-                <li><a href="./msg.html">留言</a></li>
-                <li><a href="./about.html">关于</a></li>
+                <li><a href="./index.php">首页</a></li>
+                <li><a href="./artical.php">日志</a></li>
+                <li><a href="./msg.php">留言</a></li>
+                <li><a href="./about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.html">登陆</a></li>
-                <li><a href="./sign_up.html">注册</a></li>
+                <li><a href="./sign_in.php">登陆</a></li>
+                <li><a href="./sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
@@ -34,7 +34,7 @@
           <h4 class="list_title">Tag_Name</h4>
           <div class="list_board">
               <div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
@@ -42,63 +42,63 @@
                   <hr />
               </div>
               <div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
                   <div class="clear-float"></div>
                   <hr />
               </div><div class="lists">
-                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <a href="./artical_content.php"><h5 class="art_list_title">日志标题日志标题</h5></a>
                   <p class="posted_time">
                       Posted By XXX XXXX-XX-XX XX:XX:XX
                   </p>
